name:                 jweb
version:              0.0.1.0
synopsis:             Simple web service for JWE experimentation.
license:              BSD3
license-file:         LICENSE
homepage:
author:               Samuel Gulliksson
maintainer:           samuel.gulliksson@gmail.com
category:
build-type:           Simple
cabal-version:        >=1.10

executable jweb
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
                      , jose-jwt
                      , bytestring
                      , cryptonite
                      , HsOpenSSL
                      , cmdargs
  hs-source-dirs:       src
  default-language:     Haskell2010
