name:                 jweb
version:              0.0.1
synopsis:             Simple web service for JWE experimentation.
license:              BSD3
license-file:         LICENSE
homepage:             https://github.com/zamzterz/jweb
author:               Samuel Gulliksson
maintainer:           samuel.gulliksson@gmail.com
category:
build-type:           Simple
cabal-version:        >=1.10

source-repository head
  type: git
  location: https://github.com/zamzterz/jweb.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    Jweb.App
    Jweb.Encrypt
    Jweb.Decrypt
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    cryptonite,
    HsOpenSSL,
    jose-jwt,
    -- Deps for REST application
    aeson,
    http-types,
    scotty,
    text,
    wai,
    wai-extra,
    wai-middleware-static

executable jweb-cli
  default-language:   Haskell2010
  hs-source-dirs:     src/jweb-cli
  main-is:            Main.hs
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    cmdargs,
    jose-jwt,
    jweb

executable jweb-app
  default-language:   Haskell2010
  hs-source-dirs:     src/jweb-app
  main-is:            Main.hs
  build-depends:
    base >= 4.7 && < 5,
    jweb,
    scotty

test-suite tests-jweb
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  hs-source-dirs:   test/Jweb
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    hspec,
    hspec-wai,
    hspec-wai-json,
    http-types,
    jose-jwt,
    jweb,
    tasty,
    tasty-hspec,
    tasty-hunit,
    tasty-program

